--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <link rel="stylesheet" href="style.css">
+    <div>
+        <h1>Hey There!</h1>
+    </div>
     
 </body>
 </html>
