--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     <div class="container">
         <div class="header-nav">
             <p class="MyLogo">My Logo</p>
-
+            <div class="topNav">
+                <a href="#Portfolio">Portfolio</a>
+                <a href="#About">About</a>
+                <a href="#Contact">Contact</a>
+            </div>
         </div>
         <div class="box2">
             <h1>I'm Henry<br>Glad to see you!</h1>
