Add social media  icons

--- a/index.html
+++ b/index.html
@@ -36,12 +36,20 @@
          <p class="contact">LET'S CONNECT</p>
          <div>
             <ul>
-                <li class="twitter"></li>
-                <li class="github"></li>
-                <li class="Microverse"></li>
-                <li class="LinkedIn"></li>
-                <li class="duce"></li>
-            </ul>
+                <img src="imgs/githubicon.svg" class="github">
+                <img src="imgs/twitter.svg" class="twitter">
+                <img src="imgs/chill.svg" class="chill">
+                <img src="imgs/micon.svg" class="micon">
+                <img src="imgs/i.svg" class="i">
+                <img src="imgs/dot.svg" class="dot">
+                <img src="imgs/na.svg" class="na">
+
+
+
+
+
+               
+            </ul> 
          </div>
         </div>
         
