--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
          </p>
 
          <p class="contact">LET'S CONNECT</p>
-         <div>
-            <ul class="social-icons">
+            <div>
+             <ul class="social-icons">
                 <li>
                    <a href="#" aria-label="twitter icon">
                        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -86,39 +86,85 @@
                    </a>
                </li>
                </ul>
-         </div>
+            </div>
         </section>
 
         <!--Dynamic rendering of cards in card container-->
-        <div class="card">
-            <section class="card-undefine">
-                <img src="imgs/poster.svg">
+        <div class="cards">
+            <section class="card 1">  
+                <img src="imgs/poster.svg" alt="Snapshoot-Portfolio">
+                    <div class="card-block" id="arti-1">
+                        <h2>Tonic</h2>
+                        <ul class="card-frame">
+                            <li class="no-count">CANOPY</li>
+                            <li>Back End Dev</li>
+                            <li>2015</li>
+                        </ul>
+                        <p>A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+                        <ul class="card-tags">
+                            <li>html</li>
+                            <li>css</li>
+                            <li>javascript</li>
+                        </ul>
+                        <button class="card-button" type="submit">See Project</button>
+              </div>
+            </section>
 
-                <div class="card-section" id="card-section">
-                    <h2>Tonic</h2>
-                    <ul class="card-frame">
-                        <li class="no-count">CANOPY</li>
-                        <li>
-                            Backend developer
-                        </li>
-                        <li>
-                            2015
-                        </li>
-                    </ul>
+            <section class="card 2">  
+                <img src="imgs/poster2.svg" alt="Snapshoot-Portfolio">
+                    <div class="card-block" id="arti-2">
+                        <h2>Multi-Post Stories</h2>
+                        <ul class="card-frame">
+                            <li class="no-count">FACEBOOK</li>
+                            <li>Full Stack Dev</li>
+                            <li>2015</li>
+                        </ul>
+                        <p>Experimental content creation feature that allows users to add to an existing story over the course of a day without spamming their friends.</p>
+                        <ul class="card-tags">
+                            <li>html</li>
+                            <li>Ruby on rails</li>
+                            <li>css</li>
+                        </ul>
+                        <button class="card-button" type="submit">See Project</button>
+              </div>
+            </section>
 
-                    <p>
-                        "A daily selectio of privately personalized reads; no account or sign-ups required."
-                    </p>
+            <section class="card 1">  
+                <img src="imgs/poster 3.svg" alt="Snapshoot-Portfolio">
+                    <div class="card-block" id="arti-3">
+                        <h2>Facebook 360</h2>
+                        <ul class="card-frame">
+                            <li class="no-count">FACEBOOK</li>
+                            <li>Full Stack Dev</li>
+                            <li>2015</li>
+                        </ul>
+                        <p>Exploring the future of media in Facebook's first Virtual Reality app; a place to discover and enjoy 360 photos and videos on Gear VR.</p>
+                        <ul class="card-tags">
+                            <li>html</li>
+                            <li>Ruby on rails</li>
+                            <li>css</li>
+                        </ul>
+                        <button class="card-button" type="submit">See Project</button>
+              </div>
+            </section>
 
-                    <ul class="card-tags">
-                        <li>html</li>
-                        <li>css</li>
-                        <li>Javascript</li>
-                    </ul>
-
-                    <button class="cardButton" type="submit">See Project</button>
-
-                </div>
+            <section class="card 2">  
+                <img src="imgs/poster 4.svg" alt="Snapshoot-Portfolio">
+                    <div class="card-block" id="arti-4">
+                        <h2>Uber Navigation</h2>
+                        <ul class="card-frame">
+                            <li class="no-count">Uber</li>
+                            <li>Lead Developer</li>
+                            <li>2018</li>
+                        </ul>
+                        <p>A smart assistant to make driving more safe, efficient, and fun by unlocking your most expensive computer: your car.</p>
+                        <ul class="card-tags">
+                            <li>html</li>
+                            <li>Ruby on rails</li>
+                            <li>css</li>
+                        </ul>
+                        <button class="card-button" type="submit">See Project</button>
+                    </div>
             </section>
 
         </div>
